--- a/package.json
+++ b/package.json
@@ -27,5 +27,577 @@
     "stylelint-config-standard": "^21.0.0",
     "stylelint-csstree-validator": "^1.9.0",
     "stylelint-scss": "^3.21.0"
+  },
+  "dependencies": {
+    "abab": "^2.0.6",
+    "acorn": "^8.8.1",
+    "acorn-jsx": "^5.3.2",
+    "acorn-jsx-walk": "^2.0.0",
+    "acorn-walk": "^8.2.0",
+    "agent-base": "^6.0.2",
+    "agentkeepalive": "^4.2.1",
+    "ajv": "^8.11.2",
+    "aggregate-error": "^3.1.0",
+    "ajv-formats": "^2.1.1",
+    "ansi-align": "^3.0.1",
+    "ansi-regex": "^5.0.1",
+    "abbrev": "^1.1.1",
+    "ansi-styles": "^4.3.0",
+    "anymatch": "^3.1.3",
+    "acorn-globals": "^7.0.1",
+    "are-we-there-yet": "^2.0.0",
+    "array-union": "^2.1.0",
+    "argparse": "^1.0.10",
+    "ansi-colors": "^4.1.3",
+    "asynckit": "^0.4.0",
+    "async": "^3.2.4",
+    "array-includes": "^3.1.6",
+    "array.prototype.flat": "^1.3.1",
+    "ast-types": "^0.13.4",
+    "base64-js": "^1.5.1",
+    "autoprefixer": "^9.8.8",
+    "binary-extensions": "^2.2.0",
+    "axe-core": "^4.5.2",
+    "boolbase": "^1.0.0",
+    "bcp47": "^1.1.2",
+    "braces": "^3.0.2",
+    "brace-expansion": "^1.1.11",
+    "bl": "^4.1.0",
+    "boxen": "^5.1.2",
+    "buffer-crc32": "^0.2.13",
+    "builtins": "^5.0.1",
+    "bytes": "^3.1.2",
+    "cacache": "^16.1.3",
+    "cacheable-lookup": "^5.0.4",
+    "astral-regex": "^2.0.0",
+    "browserslist": "^4.21.4",
+    "call-bind": "^1.0.2",
+    "callsites": "^3.1.0",
+    "cacheable-request": "^7.0.2",
+    "camelcase": "^6.3.0",
+    "canvas": "^2.10.2",
+    "chalk": "^4.1.2",
+    "arrify": "^1.0.1",
+    "balanced-match": "^1.0.2",
+    "bail": "^1.0.5",
+    "chokidar": "^3.5.3",
+    "chownr": "^2.0.0",
+    "character-entities-legacy": "^1.1.4",
+    "clean-stack": "^2.2.0",
+    "camelcase-keys": "^6.2.2",
+    "character-entities": "^1.2.4",
+    "caniuse-lite": "^1.0.30001436",
+    "cli-cursor": "^3.1.0",
+    "cli-spinners": "^2.7.0",
+    "clone-response": "^1.0.3",
+    "clone": "^1.0.4",
+    "character-reference-invalid": "^1.1.4",
+    "cloudinary-core": "^2.13.0",
+    "clone-regexp": "^2.2.0",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "combined-stream": "^1.0.8",
+    "concat-map": "^0.0.1",
+    "color-string": "^1.9.1",
+    "configstore": "^5.0.1",
+    "color-support": "^1.1.3",
+    "console-control-strings": "^1.1.0",
+    "ci-info": "^3.7.0",
+    "convert-source-map": "^1.9.0",
+    "confusing-browser-globals": "^1.0.11",
+    "core-js": "^3.26.1",
+    "cross-fetch": "^3.1.5",
+    "crypto-random-string": "^2.0.0",
+    "css-select": "^4.3.0",
+    "cloudinary": "^1.32.0",
+    "css-what": "^6.1.0",
+    "cssesc": "^3.0.0",
+    "cssom": "^0.5.0",
+    "cssstyle": "^2.3.0",
+    "core-util-is": "^1.0.3",
+    "data-urls": "^3.0.2",
+    "debug": "^4.3.4",
+    "data-uri-to-buffer": "^3.0.1",
+    "cosmiconfig": "^7.1.0",
+    "decimal.js": "^10.4.3",
+    "decamelize": "^1.2.0",
+    "buffer": "^5.7.1",
+    "decompress-response": "^6.0.0",
+    "deep-extend": "^0.6.0",
+    "deep-is": "^0.1.4",
+    "decamelize-keys": "^1.1.1",
+    "delayed-stream": "^1.0.0",
+    "css-tree": "^1.1.3",
+    "degenerator": "^3.0.2",
+    "delegates": "^1.0.0",
+    "define-properties": "^1.1.4",
+    "dir-glob": "^3.0.1",
+    "detect-libc": "^2.0.1",
+    "dom-serializer": "^1.4.1",
+    "domelementtype": "^2.3.0",
+    "domexception": "^4.0.0",
+    "domhandler": "^4.3.1",
+    "domutils": "^2.8.0",
+    "dot-prop": "^5.3.0",
+    "devtools-protocol": "^0.0.981744",
+    "duplexer3": "^0.1.5",
+    "electron-to-chromium": "^1.4.284",
+    "ejs": "^3.1.8",
+    "encoding": "^0.1.13",
+    "emoji-regex": "^8.0.0",
+    "doctrine": "^3.0.0",
+    "end-of-stream": "^1.4.4",
+    "err-code": "^2.0.3",
+    "cross-spawn": "^7.0.3",
+    "enquirer": "^2.3.6",
+    "cli-boxes": "^2.2.1",
+    "es-to-primitive": "^1.2.1",
+    "depd": "^1.1.2",
+    "entities": "^2.2.0",
+    "error-ex": "^1.3.2",
+    "escape-goat": "^2.1.1",
+    "defer-to-connect": "^2.0.1",
+    "escodegen": "^2.0.0",
+    "escape-string-regexp": "^1.0.5",
+    "eslint-import-resolver-node": "^0.3.6",
+    "eslint-module-utils": "^2.7.4",
+    "eslint-scope": "^5.1.1",
+    "eslint-utils": "^2.1.0",
+    "espree": "^7.3.1",
+    "es-abstract": "^1.20.4",
+    "esprima": "^4.0.1",
+    "escalade": "^3.1.1",
+    "es-shim-unscopables": "^1.0.0",
+    "eventemitter2": "^6.4.9",
+    "estraverse": "^5.3.0",
+    "eslint-visitor-keys": "^3.3.0",
+    "esutils": "^2.0.3",
+    "fast-deep-equal": "^3.1.3",
+    "execa": "^4.1.0",
+    "extract-zip": "^2.0.1",
+    "fast-json-stable-stringify": "^2.1.0",
+    "execall": "^2.0.0",
+    "fast-xml-parser": "^3.21.1",
+    "fastq": "^1.14.0",
+    "fast-levenshtein": "^2.0.6",
+    "fast-glob": "^3.2.12",
+    "fd-slicer": "^1.1.0",
+    "esrecurse": "^4.3.0",
+    "fastest-levenshtein": "^1.0.16",
+    "fill-range": "^7.0.1",
+    "file-entry-cache": "^6.0.1",
+    "extend": "^3.0.2",
+    "file-type": "^16.5.4",
+    "form-data": "^4.0.0",
+    "filelist": "^1.0.4",
+    "find-up": "^4.1.0",
+    "esquery": "^1.4.0",
+    "fs-constants": "^1.0.0",
+    "fs.realpath": "^1.0.0",
+    "fsevents": "^2.3.2",
+    "file-uri-to-path": "^2.0.0",
+    "fs-extra": "^10.1.0",
+    "ftp": "^0.3.10",
+    "function-bind": "^1.1.1",
+    "flat-cache": "^3.0.4",
+    "functions-have-names": "^1.2.3",
+    "fs-minipass": "^2.1.0",
+    "function.prototype.name": "^1.1.5",
+    "get-stream": "^5.2.0",
+    "gensync": "^1.0.0-beta.2",
+    "get-intrinsic": "^1.1.3",
+    "glob": "^8.0.3",
+    "get-uri": "^3.0.2",
+    "get-symbol-description": "^1.0.0",
+    "global-modules": "^2.0.0",
+    "global-prefix": "^3.0.0",
+    "globby": "^11.1.0",
+    "gauge": "^3.0.2",
+    "gonzales-pe": "^4.3.0",
+    "globjoin": "^0.1.4",
+    "flatted": "^3.2.7",
+    "globals": "^11.12.0",
+    "hard-rejection": "^2.1.0",
+    "has": "^1.0.3",
+    "has-flag": "^4.0.0",
+    "functional-red-black-tree": "^1.0.1",
+    "has-bigints": "^1.0.2",
+    "has-property-descriptors": "^1.0.0",
+    "has-unicode": "^2.0.1",
+    "get-stdin": "^8.0.0",
+    "hosted-git-info": "^5.2.1",
+    "html-encoding-sniffer": "^3.0.0",
+    "got": "^11.8.5",
+    "graceful-fs": "^4.2.10",
+    "http-cache-semantics": "^4.1.0",
+    "has-symbols": "^1.0.3",
+    "http-proxy-agent": "^5.0.0",
+    "has-tostringtag": "^1.0.0",
+    "http-errors": "^2.0.0",
+    "global-dirs": "^3.0.1",
+    "https-proxy-agent": "^5.0.1",
+    "humanize-ms": "^1.2.1",
+    "htmlparser2": "^3.10.1",
+    "iconv-lite": "^0.6.3",
+    "ieee754": "^1.2.1",
+    "ignore": "^5.2.1",
+    "image-size": "^1.0.2",
+    "html-tags": "^3.2.0",
+    "imurmurhash": "^0.1.4",
+    "https": "^1.0.0",
+    "indent-string": "^4.0.0",
+    "infer-owner": "^1.0.4",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "import-fresh": "^3.3.0",
+    "ini": "^2.0.0",
+    "internal-slot": "^1.0.3",
+    "invert-kv": "^3.0.1",
+    "ip": "^1.1.8",
+    "is-alphabetical": "^1.0.4",
+    "human-signals": "^1.1.1",
+    "is-binary-path": "^2.1.0",
+    "is-alphanumerical": "^1.0.4",
+    "is-arrayish": "^0.3.2",
+    "http2-wrapper": "^1.0.3",
+    "is-boolean-object": "^1.1.2",
+    "import-lazy": "^2.1.0",
+    "is-callable": "^1.2.7",
+    "is-core-module": "^2.11.0",
+    "is-buffer": "^2.0.5",
+    "is-bigint": "^1.0.4",
+    "is-docker": "^2.2.1",
+    "is-extglob": "^2.1.1",
+    "is-glob": "^4.0.3",
+    "is-decimal": "^1.0.4",
+    "is-date-object": "^1.0.5",
+    "is-hexadecimal": "^1.0.4",
+    "is-lambda": "^1.0.1",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-interactive": "^1.0.0",
+    "is-number": "^7.0.0",
+    "is-obj": "^2.0.0",
+    "is-npm": "^5.0.0",
+    "is-negative-zero": "^2.0.2",
+    "is-number-object": "^1.0.7",
+    "is-potential-custom-element-name": "^1.0.1",
+    "is-path-inside": "^3.0.3",
+    "is-shared-array-buffer": "^1.0.2",
+    "is-installed-globally": "^0.4.0",
+    "is-plain-obj": "^1.1.0",
+    "is-stream": "^2.0.1",
+    "is-string": "^1.0.7",
+    "is-typedarray": "^1.0.0",
+    "is-symbol": "^1.0.4",
+    "is-svg": "^4.3.2",
+    "is-regex": "^1.1.4",
+    "is-unicode-supported": "^0.1.0",
+    "is-wsl": "^2.2.0",
+    "isarray": "^0.0.1",
+    "aproba": "^2.0.0",
+    "is-weakref": "^1.0.2",
+    "is-yarn-global": "^0.3.0",
+    "jake": "^10.8.5",
+    "isexe": "^2.0.0",
+    "js-library-detector": "^6.5.0",
+    "has-yarn": "^2.1.0",
+    "js-tokens": "^4.0.0",
+    "json-buffer": "^3.0.1",
+    "jsesc": "^2.5.2",
+    "json-schema-traverse": "^1.0.0",
+    "is-ci": "^3.0.1",
+    "jsonc-parser": "^3.2.0",
+    "jsdom": "^20.0.3",
+    "jsonparse": "^1.3.1",
+    "js-yaml": "^3.14.1",
+    "json-stable-stringify-without-jsonify": "^1.0.1",
+    "json5": "^2.2.1",
+    "kind-of": "^6.0.3",
+    "jsonfile": "^6.1.0",
+    "keyv": "^4.5.2",
+    "latest-version": "^5.1.0",
+    "levn": "^0.4.1",
+    "lcid": "^3.1.1",
+    "lodash": "^4.17.21",
+    "is-regexp": "^2.1.0",
+    "known-css-properties": "^0.21.0",
+    "lockfile": "^1.0.4",
+    "lodash.merge": "^4.6.2",
+    "lines-and-columns": "^1.2.4",
+    "log-symbols": "^4.1.0",
+    "lru-cache": "^7.14.1",
+    "make-dir": "^3.1.0",
+    "make-fetch-happen": "^10.2.1",
+    "locate-path": "^5.0.0",
+    "longest-streak": "^2.0.4",
+    "lowercase-keys": "^2.0.0",
+    "map-obj": "^4.3.0",
+    "mathml-tag-names": "^2.1.3",
+    "lodash.truncate": "^4.4.2",
+    "json-parse-even-better-errors": "^2.3.1",
+    "mdast-util-to-string": "^2.0.0",
+    "mdast-util-to-markdown": "^0.6.5",
+    "mem": "^5.1.1",
+    "merge2": "^1.4.1",
+    "metaviewport-parser": "^0.2.0",
+    "micromatch": "^4.0.5",
+    "mdn-data": "^2.0.30",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
+    "meow": "^9.0.0",
+    "merge-stream": "^2.0.0",
+    "micromark": "^2.11.4",
+    "minimatch": "^3.1.2",
+    "map-age-cleaner": "^0.1.3",
+    "minimist-options": "^4.1.0",
+    "minipass": "^3.3.6",
+    "minipass-fetch": "^2.1.2",
+    "minimist": "^1.2.7",
+    "minipass-collect": "^1.0.2",
+    "minipass-json-stream": "^1.0.1",
+    "minipass-flush": "^1.0.5",
+    "minipass-pipeline": "^1.2.4",
+    "minipass-sized": "^1.0.3",
+    "minizlib": "^2.1.2",
+    "mkdirp": "^1.0.4",
+    "ms": "^2.1.2",
+    "mimic-response": "^1.0.1",
+    "mimic-fn": "^2.1.0",
+    "nanoid": "^3.3.4",
+    "negotiator": "^0.6.3",
+    "mkdirp-classic": "^0.5.3",
+    "netmask": "^2.0.2",
+    "node-releases": "^2.0.6",
+    "natural-compare": "^1.4.0",
+    "mutationobserver-shim": "^0.3.7",
+    "normalize-path": "^3.0.0",
+    "node-fetch": "^2.6.7",
+    "min-indent": "^1.0.1",
+    "nopt": "^5.0.0",
+    "npm-registry-fetch": "^13.3.1",
+    "npm-package-arg": "^9.1.2",
+    "normalize-package-data": "^3.0.3",
+    "normalize-range": "^0.1.2",
+    "nth-check": "^2.1.1",
+    "num2fraction": "^1.2.2",
+    "npm-run-path": "^4.0.1",
+    "nwsapi": "^2.2.2",
+    "normalize-selector": "^0.2.0",
+    "normalize-url": "^6.1.0",
+    "object-assign": "^4.1.1",
+    "object-keys": "^1.1.1",
+    "object-inspect": "^1.12.2",
+    "once": "^1.4.0",
+    "mdast-util-from-markdown": "^0.8.5",
+    "npmlog": "^5.0.1",
+    "optionator": "^0.9.1",
+    "object.entries": "^1.1.6",
+    "object.values": "^1.1.6",
+    "onetime": "^5.1.2",
+    "p-cancelable": "^2.1.1",
+    "ora": "^5.4.1",
+    "p-defer": "^1.0.0",
+    "p-map": "^4.0.0",
+    "p-is-promise": "^2.1.0",
+    "p-try": "^2.2.0",
+    "p-limit": "^2.3.0",
+    "os-locale": "^5.0.0",
+    "pac-resolver": "^5.0.1",
+    "p-locate": "^4.1.0",
+    "parent-module": "^1.0.1",
+    "parse5": "^6.0.1",
+    "parse5-htmlparser2-tree-adapter": "^6.0.1",
+    "pac-proxy-agent": "^5.0.0",
+    "path-is-absolute": "^1.0.1",
+    "package-json": "^6.5.0",
+    "path-exists": "^4.0.0",
+    "path-type": "^4.0.0",
+    "peek-readable": "^4.1.0",
+    "parse-json": "^5.2.0",
+    "picocolors": "^1.0.0",
+    "picomatch": "^2.3.1",
+    "pend": "^1.2.0",
+    "postcss": "^8.4.19",
+    "pkg-dir": "^4.2.0",
+    "postcss-less": "^5.0.0",
+    "postcss-html": "^0.36.0",
+    "postcss-safe-parser": "^6.0.0",
+    "parse-entities": "^2.0.0",
+    "postcss-sass": "^0.5.0",
+    "postcss-scss": "^4.0.6",
+    "postcss-selector-parser": "^6.0.11",
+    "path-key": "^3.1.1",
+    "postcss-value-parser": "^4.2.0",
+    "postcss-media-query-parser": "^0.2.3",
+    "postcss-resolve-nested-selector": "^0.1.1",
+    "proc-log": "^2.0.1",
+    "prelude-ls": "^1.2.1",
+    "promise-inflight": "^1.0.1",
+    "promise-retry": "^2.0.1",
+    "postcss-syntax": "^0.36.2",
+    "progress": "^2.0.3",
+    "psl": "^1.9.0",
+    "prepend-http": "^2.0.0",
+    "proxy-from-env": "^1.1.0",
+    "object.assign": "^4.1.4",
+    "pupa": "^2.1.1",
+    "puppeteer-core": "^13.7.0",
+    "querystringify": "^2.2.0",
+    "proxy-agent": "^5.0.0",
+    "nan": "^2.17.0",
+    "queue-microtask": "^1.2.3",
+    "quick-lru": "^5.1.1",
+    "raw-body": "^2.5.1",
+    "rc": "^1.2.8",
+    "read-pkg": "^5.2.0",
+    "q": "^1.5.1",
+    "path-parse": "^1.0.7",
+    "readable-stream": "^3.6.0",
+    "readdirp": "^3.6.0",
+    "readable-web-to-node-stream": "^3.0.2",
+    "pump": "^3.0.0",
+    "punycode": "^2.1.1",
+    "redent": "^3.0.0",
+    "regexpp": "^3.2.0",
+    "read-pkg-up": "^7.0.1",
+    "queue": "^6.0.2",
+    "registry-auth-token": "^4.2.2",
+    "remark-stringify": "^9.0.1",
+    "requires-port": "^1.0.0",
+    "require-from-string": "^2.0.2",
+    "remark": "^13.0.0",
+    "resolve-from": "^5.0.0",
+    "responselike": "^2.0.1",
+    "registry-url": "^5.1.0",
+    "retry": "^0.12.0",
+    "remark-parse": "^9.0.0",
+    "reusify": "^1.0.4",
+    "run-parallel": "^1.2.0",
+    "rimraf": "^3.0.2",
+    "resolve": "^1.22.1",
+    "safer-buffer": "^2.1.2",
+    "saxes": "^6.0.0",
+    "semver": "^7.3.8",
+    "repeat-string": "^1.6.1",
+    "resolve-alpn": "^1.2.1",
+    "setimmediate": "^1.0.5",
+    "safe-buffer": "^5.2.1",
+    "regexp.prototype.flags": "^1.4.3",
+    "shebang-command": "^2.0.0",
+    "shebang-regex": "^3.0.0",
+    "signal-exit": "^3.0.7",
+    "side-channel": "^1.0.4",
+    "setprototypeof": "^1.2.0",
+    "semver-diff": "^3.1.1",
+    "slash": "^3.0.0",
+    "set-blocking": "^2.0.0",
+    "smart-buffer": "^4.2.0",
+    "socks": "^2.7.1",
+    "socks-proxy-agent": "^7.0.0",
+    "source-map": "^0.6.1",
+    "simple-concat": "^1.0.1",
+    "source-map-js": "^1.0.2",
+    "simple-swizzle": "^0.2.2",
+    "slice-ansi": "^4.0.0",
+    "simple-get": "^3.1.1",
+    "spdx-exceptions": "^2.3.0",
+    "restore-cursor": "^3.1.0",
+    "spdx-correct": "^3.1.1",
+    "specificity": "^0.4.1",
+    "ssri": "^9.0.1",
+    "sprintf-js": "^1.0.3",
+    "string-width": "^4.2.3",
+    "spdx-license-ids": "^3.0.12",
+    "string_decoder": "^1.3.0",
+    "spdx-expression-parse": "^3.0.1",
+    "string.prototype.trimend": "^1.0.6",
+    "string.prototype.trimstart": "^1.0.6",
+    "strip-ansi": "^6.0.1",
+    "strip-indent": "^3.0.0",
+    "strnum": "^1.0.5",
+    "strtok3": "^6.3.0",
+    "strip-json-comments": "^2.0.1",
+    "strip-bom": "^3.0.0",
+    "supports-color": "^7.2.0",
+    "statuses": "^2.0.1",
+    "sugarss": "^2.0.0",
+    "symbol-tree": "^3.2.4",
+    "style-search": "^0.1.0",
+    "stylelint-config-recommended": "^4.0.0",
+    "safe-regex-test": "^1.0.0",
+    "table": "^6.8.1",
+    "tar-fs": "^2.1.1",
+    "svg-tags": "^1.0.0",
+    "tar": "^6.1.12",
+    "through": "^2.3.8",
+    "to-regex-range": "^5.0.1",
+    "tar-stream": "^2.2.0",
+    "token-types": "^4.2.1",
+    "text-table": "^0.2.0",
+    "tough-cookie": "^4.1.2",
+    "tr46": "^3.0.0",
+    "to-fast-properties": "^2.0.0",
+    "toidentifier": "^1.0.1",
+    "trim-newlines": "^3.0.1",
+    "strip-final-newline": "^2.0.0",
+    "tsconfig-paths": "^3.14.1",
+    "to-readable-stream": "^1.0.0",
+    "typedarray-to-buffer": "^3.1.5",
+    "tslib": "^2.4.1",
+    "type-check": "^0.4.0",
+    "tsutils": "^3.21.0",
+    "unbzip2-stream": "^1.4.3",
+    "unique-slug": "^3.0.0",
+    "unique-filename": "^2.0.1",
+    "unique-string": "^2.0.0",
+    "unified": "^9.2.2",
+    "unist-util-find-all-after": "^3.0.2",
+    "unbox-primitive": "^1.0.2",
+    "unpipe": "^1.0.0",
+    "universalify": "^2.0.0",
+    "trough": "^1.0.5",
+    "uri-js": "^4.4.1",
+    "url-parse": "^1.5.10",
+    "unist-util-stringify-position": "^2.0.3",
+    "util-deprecate": "^1.0.2",
+    "update-browserslist-db": "^1.0.10",
+    "update-notifier": "^5.1.0",
+    "validate-npm-package-name": "^4.0.0",
+    "glob-parent": "^5.1.2",
+    "url-parse-lax": "^3.0.0",
+    "unist-util-is": "^4.1.0",
+    "v8-compile-cache": "^2.3.0",
+    "w3c-xmlserializer": "^4.0.0",
+    "vfile": "^4.2.1",
+    "webidl-conversions": "^7.0.0",
+    "supports-preserve-symlinks-flag": "^1.0.0",
+    "whatwg-encoding": "^2.0.0",
+    "whatwg-mimetype": "^3.0.0",
+    "whatwg-url": "^11.0.0",
+    "vfile-message": "^2.0.4",
+    "vm2": "^3.9.12",
+    "wcwidth": "^1.0.1",
+    "which": "^2.0.2",
+    "which-boxed-primitive": "^1.0.2",
+    "content-type": "^1.0.4",
+    "wide-align": "^1.1.5",
+    "wrappy": "^1.0.2",
+    "ws": "^8.11.0",
+    "write-file-atomic": "^3.0.3",
+    "xml-name-validator": "^4.0.0",
+    "xdg-basedir": "^4.0.0",
+    "xmlchars": "^2.2.0",
+    "yallist": "^4.0.0",
+    "xregexp": "^2.0.0",
+    "wrap-ansi": "^7.0.0",
+    "yauzl": "^2.10.0",
+    "defaults": "^1.0.4",
+    "widest-line": "^3.1.0",
+    "type-fest": "^0.20.2",
+    "zwitch": "^1.0.5",
+    "word-wrap": "^1.2.3",
+    "yargs-parser": "^20.2.9",
+    "yaml": "^1.10.2",
+    "validate-npm-package-license": "^3.0.4"
   }
 }
